all functionality done except simulate

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div class="resultContainer">
         <div id="result"></div>
-        <button id="reset" onclick="game.reset(p1,p2)">Reset</button>
+        <button id="reset" onclick="gameObject.reset(p1,p2)">Reset</button>
     </div>
 
     <audio id="p1attack" controls style="display:none">
